src/MedVisit.AccessManagement/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accessmanagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accessmanagement
  template:
    metadata:
      labels:
        app: accessmanagement
    spec:
      containers:
      - name: app
        image: elizavetamay/medvisit_accessmanagement:app
        ports:
        - containerPort: 8080
