src/MedVisit.AccessManagement/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accessmanagement-service
spec:
  selector:
    app: accessmanagement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
