src/MedVisit.AccessManagement/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accessmanagement-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /user/*
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
